vote/vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vote
  name: vote
spec:
  type: ClusterIP
  ports:
  - name: "vote-service"
    port: 8080
    targetPort: 80
    protocol: TCP
  selector:
    app: vote
