vote/result-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: result-ingress
  namespace: vote
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - result.ramtin-safadoust.ir
    secretName: result-tls
  rules:
  - host: result.ramtin-safadoust.ir
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: result
            port:
              number: 8081
